--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Lucas Francisco</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mediaquery.css">
 </head>
 <body>
     <nav id="home">
@@ -22,9 +23,7 @@
             <a href="#aboutme" >
                 <li>Skills</li>
             </a>
-            <a href="">
-                <li>Carreira</li>
-            </a>
+           
         </ul>
         <a href="https://wa.me/qr/VYL2TF3TUQ22K1" id="link-btn" target="_blank" rel="external"><button>Contate-me</button></a>
     </nav>
@@ -42,7 +41,7 @@
               <a href="assets/195f59866eaa3645a8a623b400dc7948.jpg" download="Curriculo Lucas" type="application/PDF"><button>Download CV</button></a>
         </div>
 
-          <img src="assets/195f59866eaa3645a8a623b400dc7948.jpg" alt="">
+          <img src="assets/foto-lucas.jpg" alt="">
     </section>
     <section class="aboutme" id="aboutme">
         <div class="aboutme-header">
@@ -50,14 +49,13 @@
             <div class="hr"><hr></div>
         </div>
         <div class="aboutme-container">
-            <img src="assets/195f59866eaa3645a8a623b400dc7948.jpg" alt="">
+            <img src="assets/foto-lucas2.jpg" alt="">
             <div class="aboutme-right">
                 <h1>Programador Front-End</h1>
-                <p class="p-right">Conheci a programação por acaso, ouvi alguns amigos falando que essa "coisa" era horrivel e tenebrosa, e eu pensei: "será que é isso tudo mesmo ?",
-                     fui saber mais sobre e hoje estou aqui, apaixonado por programação.
+                <p class="p-right"> Olá, meu nome é Lucas Francisco, atualmente eu estudo programação Front-End no SENAI, também estudo por fora na plataforma 'OnebitCode'
+                    e 'Cursoemvideo'.
                 </p>
-                <p>Buscando sempre me aprofundar nos meus conhecimentos, toda ajuda e/ou opinião 
-                    são válidas!
+                <p>Conheci a programação através de comentarios negativos sobre, mas, acabei me apaixonando e hoje estou focado em ser desenvolvedor.
                 </p>
 
                 <div class="skills" id="skills">
