projeto media query

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <nav id="home">
-
         <ul>
             <a href="#home">
                 <li>Home</li>
@@ -76,7 +75,7 @@
             <h1>Meus Repositórios </h1>
         </div>
         <div class="repositorios">
-            <a href="" target="_blank"><img src="assets/foto-kreativ.PNG" alt=""></a>
+            <a href="www.youtube.com.br" target="_blank"><img src="assets/foto-kreativ.PNG" alt=""></a>
             <a href="" target="_blank"><img src="assets/foto-connectez-vous.PNG" alt=""></a>
             <a href="" target="_blank"><img src="assets/foto-skambo.PNG" alt=""></a>
             <a href="" target="_blank"><img src="assets/foto-login.PNG" alt=""></a>
@@ -91,8 +90,7 @@
     </section>
 
     <footer>
-        <p>&copy; Lucas Francisco</p>
-        
+        <p>&copy; Lucas Francisco Miguel dos Santos</p>
     </footer>
     
 </body>
