--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Lucas Francisco</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mediaquery.css">
     
 </head>
 <body>
     <nav id="home">
         <ul>
-            <a href="#home">
+            <a href="#home" class="escondido">
                 <li>Home</li>
             </a>
-            <a href="#aboutme">
+            <a href="#aboutme" class="escondido">
                 <li>Sobre mim</li>
             </a>
             <a href="#port">
                 <li>Portifólio</li>
             </a>
-            <a href="#aboutme" >
+            <a href="#aboutme" class="escondido">
                 <li>Skills</li>
             </a>
            <a href="#carreira">
@@ -108,7 +109,7 @@
                 <div class="quadrados">
                     <h3>HTML e CSS</h3>
                     <p>Comecei com o curso de HTML e CSS no site <a href="https://www.cursoemvideo.com/">Cursoemvideo<br></a> 
-                      Cursoemvideo, realizei 4 módulos e realizei alguns projetos junto com o professor.</p>
+                      realizei 4 módulos e realizei alguns projetos junto com o professor.</p>
                 </div>
                 <div class="quadrados">
                     <h3>Programador Front-End</h3>
