--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </ul>
         <a href="https://wa.me/qr/VYL2TF3TUQ22K1" id="link-btn" target="_blank" rel="external"><button>Contate-me</button></a>
     </nav>
+
     <section class="sec-bg" >
         <div class="name">
             <p class="section-header" >Bem vindo ao meu Portifólio</p>
@@ -45,6 +46,7 @@
 
           <img src="assets/foto-lucas.jpg" alt="">
     </section>
+    <hr>
     <section class="aboutme" id="aboutme">
         <div class="aboutme-header">
             <h1>Sobre <span>Mim</span></h1>
@@ -57,7 +59,7 @@
                 <p class="p-right"> Olá, meu nome é Lucas Francisco, atualmente eu estudo programação Front-End no SENAI, também estudo por fora na plataforma 'OnebitCode'
                     e 'Cursoemvideo'.
                 </p>
-                <p>Conheci a programação através de comentarios negativos sobre, mas, acabei me apaixonando e hoje estou focado em ser desenvolvedor.
+                <p class="p-right">Conheci a programação através de comentarios negativos sobre, mas, acabei me apaixonando e hoje estou focado em ser desenvolvedor.
                 </p>
 
                 <div class="skills" id="skills">
